fix(itr): fix iteration infotip visibility (#2661)

--- a/src/app/components_ngrx/custom-query-panel/custom-query-panel.component.less
+++ b/src/app/components_ngrx/custom-query-panel/custom-query-panel.component.less
@@ -12,10 +12,12 @@
     border-left-color: transparent;
     border-bottom: 1px solid;
     border-bottom-color: @color-pf-black;
+    line-height: 15px;
     cursor: default; // as item is not clickable
     &.nohover {
       h3 {
         color: @color-pf-black-500;
+        line-height: 1;
       }
     }
     &:not(.nohover):hover {
