--- a/src/app/components_ngrx/iterations-panel/iterations-panel.component.less
+++ b/src/app/components_ngrx/iterations-panel/iterations-panel.component.less
@@ -9,10 +9,12 @@
     padding: 20px 15px;
     border-left: 4px solid;
     border-left-color: transparent;
+    line-height: 15px;
     cursor: default; // as item is not clickable
     &.nohover {
       h3 {
         color: @color-pf-black-500;
+        line-height: 1;
       }
     }
     &:not(.nohover):hover {
